# meshx

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: rust.yml
assets/: README.md  dodecagon.vtk  hex.vtk  icosahedron.vtk  quad.vtk  sphere_coarse.msh  spot.mtl  tet.vtk  tri.vtk
examples/: tutorial.rs
meshx-derive/: Cargo.toml  README.md
meshx-derive/src/: attrib.rs  intrinsic.rs  lib.rs
src/: attrib.rs  bbox.rs  index.rs  interval.rs  io.rs  lib.rs
src/algo/: connectivity.rs  intersections.rs  merge.rs  mod.rs  normals.rs  partition.rs  split.rs
src/attrib/: attribute.rs  bytes.rs
src/index/: checked.rs
src/io/: msh.rs  obj.rs  vtk.rs
src/mesh/: adaptive_grid.rs  attrib.rs  attrib_dynamic.rs  bench.rs  builder.rs  mod.rs  pointcloud.rs  polymesh.rs  tetmesh.rs  topology.rs  transform_impl.rs  uniform_poly_mesh.rs  unstructured_mesh.rs  vertex_positions.rs
src/mesh/attrib/: attribute.rs  index.rs
src/mesh/tetmesh/: extended.rs  surface.rs
src/mesh/uniform_poly_mesh/: extended.rs
src/mesh/unstructured_mesh/: surface.rs
src/ops/: mod.rs  transform.rs
src/prim/: mod.rs  tetrahedron.rs  triangle.rs
src/utils/: math.rs  slice.rs
