[package]
name = "meshx"
version = "0.6.1"
authors = ["Egor Larionov <egor.larionov@gmail.com>"]
description = "A mesh eXchange library with conversion utilities for popular mesh formats."
edition = "2018"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/elrnv/meshx"
repository = "https://github.com/elrnv/meshx"
documentation = "https://docs.rs/meshx"
keywords = ["mesh", "geometry", "interchange", "io"]

[dependencies]
meshx-derive = { path = "meshx-derive", version = "0.1.0" }
num-traits = "0.2"
dync = { version = "0.5", features = ['numeric'] }
bytemuck = { version = "1.5", features = ["extern_crate_alloc"] }
serde = { version = "1.0", features = ["derive"], optional = true }
rayon = { version = "1", optional = true }
ahash = { version = "0.8" }
math = { package = "nalgebra", version = "0.32" }
flatk = { git = "https://github.com/elrnv/flatk.git", version = "0.5" }
vtkio = { git = "https://github.com/Navier-AI/vtkio", optional = true }
objio = { package = "obj", version = "0.10", optional = true }
mshio = { version = "0.4", optional = true }
ordered-float = { version = "3", default-features = false }

[dev-dependencies]
rand = "0.8"
approx = "0.5"
criterion = { version = "0.3" }
autodiff = { version = "0.7", features = ["na"] }
ron = "0.8"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
getrandom = { version = "0.2", features = ["js"] }

[features]
default = ["io"]
io = ["vtkio", "objio", "mshio"]
bench = ["criterion/real_blackbox", "rayon"]
serde_all = ["serde", "math/serde-serialize"]
#binary_vtk = ["vtkio/binary"]
unstable = []
